# flow-stability-tools

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_all_cases_regression.py  temporal_rayleigh_study_tool.py  velocity_profile_references.md
cases/case_001/: config.yaml  run.py
cases/case_002/: config.yaml
cases/case_003/: config.yaml
cases/case_004/: config.yaml
cases/case_005/: config.yaml
cases/case_006/: config.yaml
src/analysis/: helpers.py  registry.py
src/components/: __init__.py  analysis_helpers.py  analysis_registry.py  artifacts.py  baseflow.py  baseflow_time_series.py  export.py  plotting.py  rayleigh.py  scan.py  solver.py  solver_registry.py  spectral.py  time_series_export.py  vtk_export.py
src/config/: loader.py  schema.py
src/core/: __init__.py  case.py  context.py  results.py  state.py
src/domain/: baseflow.py
src/fst_io/: artifacts.py  plotting.py  sympy_export.py  time_series_export.py  vtk_export.py
src/numerics/: baseflow_time_series.py  time_series.py
src/pipeline/: __init__.py  pipeline.py  step.py
src/runners/: __init__.py  case_runner.py
src/solvers/: scan.py  solver.py  solver_registry.py
src/steps/: __init__.py  analysis_step.py  setup_step.py  solve_step.py
src/visualization/: baseflow_time_series_plot.py  vtk_time_series_plot.py
tests/: test_analysis_registry.py  test_baseflow.py  test_solver_registry.py  test_spectral.py
