[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-stability-tools-fst"
version = "0.1.0"
description = "Modular, configuration-driven simulation framework"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
